Fix: Reduce spacing between blocks to 1rem

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -57,7 +57,8 @@ $grid-w-normal: 900px;
 $grid-w-ex-normal: 1200px;
 $grid-toc: 1400px;
 $padding-lr: 16px;
-$margin-bottom: 1.5 * $font-size; // margin-bottom
+// $margin-bottom: 1.5 * $font-size; // margin-bottom
+$margin-bottom: 1 * $font-size; // margin-bottom
 $margin-bottom-code: 1.1 * $margin-bottom; // for code blocks
 $padding-margin: 2rem;
 
